fix: padding-right set to 0 on mobile

--- a/src/components/Stats/ContentTeamTable/ContentTeamTable.module.scss
+++ b/src/components/Stats/ContentTeamTable/ContentTeamTable.module.scss
@@ -134,6 +134,7 @@
   > .tableRow {
     display: flex;
     height: 38.5px;
+		padding-right: 7px;
 
     > div {
       font: 300 0.875rem / 38.5px var(--font-nunito);
